added new methods

--- a/ProductAPI/appsettings.json
+++ b/ProductAPI/appsettings.json
@@ -6,7 +6,7 @@
     "key": "48BD1669-1947-49AD-9F5E-BEC8880B2E7D"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:servidorpruebaapi.database.windows.net,1433;Initial Catalog=prueba1;Persist Security Info=False;User ID=adminsql;Password=Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost,1433;Database=db;User ID=retailuser;Password=retail;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
